--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -12,5 +12,10 @@
     "registration": "Зарегистрироваться",
     "login": "Войти",
     "logout": "Выйти"
+  },
+  "error": {
+    "unspecific": "Что-то пошло не так",
+    "401": "Не удалось авторизироваться",
+    "409": "Пользователь с таким именем уже существует"
   }
 }
