--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -13,6 +13,16 @@
     "login": "Войти",
     "logout": "Выйти"
   },
+  "form": {
+    "header": "Форма",
+    "person": "Персона",
+    "personSearch": "Искать персону",
+    "location": "Место",
+    "locationSearch": "Искать место",
+    "relation": "Связь",
+    "quotes": "Цитата и ссылка на издание",
+    "save": "Сохранить"
+  },
   "error": {
     "unspecific": "Что-то пошло не так",
     "401": "Не удалось авторизироваться",
