--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -23,9 +23,9 @@
     "quotes": "Цитата и ссылка на издание",
     "save": "Сохранить"
   },
-  "error": {
-    "unspecific": "Что-то пошло не так",
-    "401": "Не удалось авторизироваться",
-    "409": "Пользователь с таким именем уже существует"
+  "apiErrorTypes": {
+    "USERNAME_DUPLICATION": "Пользователь с таким именем уже существует",
+    "WRONG_USER_PASSWORD": "Неверный пароль",
+    "NO_USER_WITH_SUCH_USERNAME": "Не существует пользователя с таким именем"
   }
 }
