--- a/frontend/src/localization/languages/en.json
+++ b/frontend/src/localization/languages/en.json
@@ -26,6 +26,7 @@
   "apiErrorTypes": {
     "USERNAME_DUPLICATION": "User with that username already exists",
     "WRONG_USER_PASSWORD": "Wrong password",
-    "NO_USER_WITH_SUCH_USERNAME": "No user with this username"
+    "NO_USER_WITH_SUCH_USERNAME": "No user with this username",
+    "SOMETHING_WENT_WRONG": "Something went wrong"
   }
 }
