--- a/frontend/src/localization/languages/en.json
+++ b/frontend/src/localization/languages/en.json
@@ -14,7 +14,9 @@
   },
   "entities": {
     "viewChanges": "View changes",
-    "save": "Save"
+    "save": "Save",
+    "actions": "Actions",
+    "view": "View"
   },
   "persons": {
     "linkTitle": "Persons",
@@ -29,13 +31,34 @@
     "deathDate": "Date of death"
   },
   "locations": {
+    "linkTitle": "Locations",
     "addNew": "Add new location",
     "name": "Name",
+    "architects": "Architects",
     "address": "Address",
     "constructionDate": "Construction date",
     "demolitionDate": "Demolition date",
     "buildingType": "Building type",
-    "description": "Description"
+    "description": "Description",
+    "coordinateX": "coordinate X",
+    "coordinateY": "coordinate Y"
+  },
+  "relations": {
+    "addNew": "Add new relation",
+    "linkTitle": "Relations"
+  },
+  "addresses": {
+    "addNew": "Add new address",
+    "linkTitle": "Addresses",
+    "street": "Street",
+    "homeNumber": "Home number",
+    "housing": "Housing",
+    "build": "Build"
+  },
+  "relationTypes": {
+    "linkTitle": "Relation types",
+    "addNew": "Add new relation type",
+    "name": "Name"
   },
   "form": {
     "header": "Form",
