--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -12,6 +12,9 @@
     "login": "Войти",
     "logout": "Выйти"
   },
+  "notifications": {
+    "savedSuccessfully": "Успешно сохранено"
+  },
   "entities": {
     "viewChanges": "Посмотреть изменения",
     "save": "Сохранить",
