--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -19,7 +19,8 @@
     "viewChanges": "Посмотреть изменения",
     "save": "Сохранить",
     "actions": "Действия",
-    "view": "Обзор"
+    "view": "Обзор",
+    "approve": "Подтвердить"
   },
   "persons": {
     "linkTitle": "Персоны",
