--- a/frontend/src/localization/languages/en.json
+++ b/frontend/src/localization/languages/en.json
@@ -77,6 +77,7 @@
   },
   "apiErrorTypes": {
     "USERNAME_DUPLICATION": "User with that username already exists",
+    "APPROVE_FORBIDDEN": "You cannot approve changes since you are not an admin",
     "WRONG_USER_PASSWORD": "Wrong password",
     "NO_USER_WITH_SUCH_USERNAME": "No user with this username",
     "SOMETHING_WENT_WRONG": "Something went wrong"
