--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -77,6 +77,7 @@
   },
   "apiErrorTypes": {
     "USERNAME_DUPLICATION": "Пользователь с таким именем уже существует",
+    "APPROVE_FORBIDDEN": "Вы не можете подтвержать изменения, так как вы не админ",
     "WRONG_USER_PASSWORD": "Неверный пароль",
     "NO_USER_WITH_SUCH_USERNAME": "Не существует пользователя с таким именем",
     "SOMETHING_WENT_WRONG": "Что-то пошло не так"
