block changes on backend and add frontend notifications

--- a/frontend/src/localization/languages/en.json
+++ b/frontend/src/localization/languages/en.json
@@ -79,6 +79,7 @@
     "USERNAME_DUPLICATION": "User with that username already exists",
     "APPROVE_FORBIDDEN": "You cannot approve changes since you are not an admin",
     "WRONG_USER_PASSWORD": "Wrong password",
+    "CHANGES_PATCHING_FORBIDDEN": "You cannot patch changes since you are not an author of this changes",
     "NO_USER_WITH_SUCH_USERNAME": "No user with this username",
     "SOMETHING_WENT_WRONG": "Something went wrong"
   }
