--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -78,6 +78,7 @@
   "apiErrorTypes": {
     "USERNAME_DUPLICATION": "Пользователь с таким именем уже существует",
     "APPROVE_FORBIDDEN": "Вы не можете подтвержать изменения, так как вы не админ",
+    "CHANGES_PATCHING_FORBIDDEN": "Вы не можете изменять эту сущность, потому что её изменял другой пользователь и изменения не подтверждены",
     "WRONG_USER_PASSWORD": "Неверный пароль",
     "NO_USER_WITH_SUCH_USERNAME": "Не существует пользователя с таким именем",
     "SOMETHING_WENT_WRONG": "Что-то пошло не так"
