--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -74,7 +74,8 @@
     "street": "Улица",
     "homeNumber": "Номер дома",
     "housing": "Корпус",
-    "build": "Строение"
+    "build": "Строение",
+    "link": "Ссылка"
   },
   "relationTypes": {
     "linkTitle": "Типы связей",
