--- a/frontend/src/localization/languages/en.json
+++ b/frontend/src/localization/languages/en.json
@@ -33,7 +33,7 @@
     "description": "Description",
     "source": "Source",
     "wikiLink": "Wiki link",
-    "photoLinks": "Photo links (split with ', ')",
+    "photoLinks": "Photo links",
     "mainPhotoLink": "Main photo link",
     "birthDate": "Date of birth",
     "deathDate": "Date of death"
@@ -49,7 +49,7 @@
     "locationTypeId": "Building type",
     "description": "Description",
     "wikiLink": "Wiki link",
-    "photoLinks": "Photo links (split with ', ')",
+    "photoLinks": "Photo links",
     "mainPhotoLink": "Main photo link",
     "coordinateX": "Coordinate X",
     "coordinateY": "Coordinate Y"
