--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -33,7 +33,7 @@
     "description": "Описание",
     "source": "Источник",
     "wikiLink": "Ссылка на Википедию",
-    "photoLinks": "Ссылки на фото (разделять ', ')",
+    "photoLinks": "Ссылки на фото",
     "mainPhotoLink": "Ссылка на главное фото",
     "birthDate": "Дата рождения",
     "deathDate": "Дата смерти"
@@ -49,7 +49,7 @@
     "locationTypeId": "Тип строения",
     "description": "Описание",
     "wikiLink": "Ссылка на Википедию",
-    "photoLinks": "Ссылки на фото (разделять ', ')",
+    "photoLinks": "Ссылки на фото",
     "mainPhotoLink": "Ссылка на главное фото",
     "coordinateX": "Координата X",
     "coordinateY": "Координата Y"
