create SavingApprovedChangesError and localization for it

--- a/frontend/src/localization/languages/en.json
+++ b/frontend/src/localization/languages/en.json
@@ -93,6 +93,7 @@
     "APPROVE_FORBIDDEN": "You cannot approve changes since you are not an admin",
     "WRONG_USER_PASSWORD": "Wrong password",
     "CHANGES_PATCHING_FORBIDDEN": "You cannot patch changes since you are not an author of this changes",
+    "SAVING_APPROVED_CHANGES": "Changes was approved by administrator. Please, refresh the page.",
     "NO_USER_WITH_SUCH_USERNAME": "No user with this username",
     "SOMETHING_WENT_WRONG": "Something went wrong"
   }
