--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -66,7 +66,10 @@
   },
   "relations": {
     "addNew": "Добавить новую связь",
-    "linkTitle": "Связи"
+    "linkTitle": "Связи",
+    "locationName": "Название локации",
+    "personName": "Имя персоны",
+    "relationName": "Название связи"
   },
   "addresses": {
     "addNew": "Добавить новый адрес",
