--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -47,7 +47,7 @@
     "architects": "Архитекторы",
     "constructionDate": "Дата постройки",
     "demolitionDate": "Дата сноса",
-    "locationTypeId": "Тип строения",
+    "locationTypeName": "Тип строения",
     "description": "Описание",
     "wikiLink": "Ссылка на Википедию",
     "photoLinks": "Ссылки на фото",
