ui changes in specific overview

--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -20,6 +20,9 @@
     "save": "Сохранить",
     "markForDeletion": "Пометить для удаления",
     "cancelDeletion": "Отменить удаление",
+    "beforeChanges": "До изменений",
+    "afterChanges": "После изменений",
+    "edit": "Редактировать",
     "deletedMessage": "Сущность помечена для удаления",
     "actions": "Действия",
     "view": "Обзор",
