--- a/frontend/src/localization/languages/en.json
+++ b/frontend/src/localization/languages/en.json
@@ -19,6 +19,9 @@
     "viewChanges": "View changes",
     "save": "Save",
     "actions": "Actions",
+    "beforeChanges": "Before changes",
+    "afterChanges": "After changes",
+    "edit": "Edit",
     "view": "View",
     "markForDeletion": "Mark for deletion",
     "cancelDeletion": "Cancel deletion",
