add notifications on approve

--- a/frontend/src/localization/languages/en.json
+++ b/frontend/src/localization/languages/en.json
@@ -25,6 +25,7 @@
     "actions": "Actions",
     "beforeChanges": "Before changes",
     "afterChanges": "After changes",
+    "successfulApprove": "Approved successfully",
     "edit": "Edit",
     "view": "View",
     "markForDeletion": "Mark for deletion",
