base rejection logic

--- a/frontend/src/localization/languages/en.json
+++ b/frontend/src/localization/languages/en.json
@@ -21,6 +21,7 @@
   },
   "entities": {
     "viewChanges": "View changes",
+    "deleteChanges": "Delete changes",
     "save": "Save",
     "actions": "Actions",
     "beforeChanges": "Before changes",
