--- a/frontend/src/localization/languages/en.json
+++ b/frontend/src/localization/languages/en.json
@@ -23,6 +23,7 @@
     "viewChanges": "View changes",
     "deleteChanges": "Delete changes",
     "save": "Save",
+    "reject": "Reject changes",
     "actions": "Actions",
     "beforeChanges": "Before changes",
     "afterChanges": "After changes",
