--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -109,7 +109,7 @@
   "apiErrorTypes": {
     "USERNAME_DUPLICATION": "Пользователь с таким именем уже существует",
     "APPROVE_FORBIDDEN": "Вы не можете подтвержать изменения, так как вы не админ",
-    "REJECT_FORBIDDEN": "Вы не можете удалять изменения, так как вы не админ",
+    "REJECT_FORBIDDEN": "Вы не можете удалять изменения, так как вы не админ или вы не являетесь автором изменений",
     "CHANGES_PATCHING_FORBIDDEN": "Вы не можете изменять эту сущность, потому что её изменял другой пользователь и изменения не подтверждены",
     "SAVING_APPROVED_CHANGES": "Изменения были одобрены администратором. Пожалуйста, обновите страницу.",
     "WRONG_USER_PASSWORD": "Неверный пароль",
