add confirmation on approve and rejecting

--- a/frontend/src/localization/languages/en.json
+++ b/frontend/src/localization/languages/en.json
@@ -17,7 +17,8 @@
     "interfaceLanguage": "Interface language"
   },
   "notifications": {
-    "savedSuccessfully": "Saved successfully"
+    "savedSuccessfully": "Saved successfully",
+    "areYouSure": "Are you sure?"
   },
   "entities": {
     "viewChanges": "View changes",
