--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -17,7 +17,8 @@
     "interfaceLanguage": "Язык интерфейса"
   },
   "notifications": {
-    "savedSuccessfully": "Успешно сохранено"
+    "savedSuccessfully": "Успешно сохранено",
+    "areYouSure": "Вы уверены?"
   },
   "entities": {
     "viewChanges": "Посмотреть изменения",
