--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -115,6 +115,7 @@
     "SAVING_APPROVED_CHANGES": "Изменения были одобрены администратором. Пожалуйста, обновите страницу.",
     "WRONG_USER_PASSWORD": "Неверный пароль",
     "NO_USER_WITH_SUCH_USERNAME": "Не существует пользователя с таким именем",
-    "SOMETHING_WENT_WRONG": "Что-то пошло не так"
+    "SOMETHING_WENT_WRONG": "Что-то пошло не так",
+    "ALREADY_CHANGED": "Эта сущность уже была изменена другим пользователем. Пожалуйста, перезагрузите страницу."
   }
 }
