--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -108,6 +108,14 @@
     "addNew": "Добавить новый тип",
     "name": "Название"
   },
+  "routes": {
+    "linkTitle": "Маршруты",
+    "addNew": "Добавить новый маршрут",
+    "name": "Название",
+    "description": "Описание",
+    "locationIds": "Список локаций",
+    "photoLink": "Ссылка на фото"
+  },
   "apiErrorTypes": {
     "USERNAME_DUPLICATION": "Пользователь с таким именем уже существует",
     "APPROVE_FORBIDDEN": "Вы не можете подтвержать изменения, так как вы не админ",
