--- a/frontend/src/localization/languages/ru.json
+++ b/frontend/src/localization/languages/ru.json
@@ -50,7 +50,7 @@
     "source": "Источник",
     "wikiLink": "Ссылка на Википедию",
     "photoLinks": "Ссылки на фото",
-    "mainPhotoLink": "Ссылка на главное фото",
+    "mainPhoto": "Главное фото",
     "birthDate": "Дата рождения",
     "deathDate": "Дата смерти"
   },
